[project]
name = "nothing_pip"
version = "0.3.0"
description = "Let's share a program made with Python with mankind. It's nothing. It's easy."
authors = [
    {name = "dmario24", email = "data.mario24@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

 [tool.pdm.dev-dependencies]
 test = ["pytest", "pytest-cov"]

 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"